--- a/public/index.html
+++ b/public/index.html
@@ -135,8 +135,19 @@ p {
                             display: true,
                             text: 'Do you appreciate learning alone (0), or learn and share with others (10) ?',
                             font: {
-                                size: 12
+                                size: 12,
+                                weight: 'bold'
                             }
+                        },
+                        ticks: {
+                            font: {
+                                size: 14,
+                                weight: 'bold'
+                            }
+                        },                         
+                        grid: {
+                            lineWidth: 2, 
+                            color: 'rgba(0, 0, 0, 0.3)' 
                         }
                     },
                     y: {
@@ -146,9 +157,20 @@ p {
                             display: true,
                             text: 'Do you prefer learning from theroy (0), or go to practice immediatly (10)?',
                             font: {
-                                size: 12
+                                size: 12,
+                                weight: 'bold'
                             }
-                        }
+                        },
+                        ticks: {
+                            font: {
+                                size: 14,
+                                weight: 'bold'
+                            }
+                        },                        
+                        grid: {
+                            lineWidth: 2, 
+                            color: 'rgba(0, 0, 0, 0.3)' 
+                        }                        
                     }
                 },
                 elements: {
