limit to 3 points per connexion

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@ p {
 </head>
 <body>
     <h1>How do you like to learn ?</h1>
-    <p>Click on the plot to add your learning styles.</p>
+    <p>Click on the plot to add your learning styles (max 3 points).</p>
     <div class="container">
         <img src="qr.png" alt="QR Code" class="qr-code">
         <canvas id="scatterPlot" width="800" height="800"></canvas>
