--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,7 @@ p {
                         max: 10,
                         title: {
                             display: true,
-                            text: 'Do you prefer learning from theroy (0), or go to practice immediatly (10)?',
+                            text: 'Do you prefer learning from theory (0), or go to practice immediatly (10)?',
                             font: {
                                 size: 12,
                                 weight: 'bold'
