--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,10 @@ p {
     <h1>How do you like to learn ?</h1>
     <p>Click on the plot to add your learning styles (max 3 points).</p>
     <div class="container">
+        <div>
         <img src="qr.png" alt="QR Code" class="qr-code">
+        <p>https://bit.ly/3O9SKQC</p>
+        </div>
         <canvas id="scatterPlot" width="800" height="800"></canvas>
     </div>
     <script>
