--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@ p {
 </head>
 <body>
     <h1>How do you like to learn ?</h1>
-    <p>Click on the plot to add your learning styles (max 3 points).</p>
+    <p>Click on the plot to add your prefered learning style.</p>
     <div class="container">
         <div>
         <img src="qr.png" alt="QR Code" class="qr-code">
@@ -136,7 +136,7 @@ p {
                         max: 10,
                         title: {
                             display: true,
-                            text: 'Do you appreciate learning alone (0), or learn and share with others (10) ?',
+                            text: 'Learning alone (0)                or                 learn and share with others (10)',
                             font: {
                                 size: 12,
                                 weight: 'bold'
@@ -158,7 +158,7 @@ p {
                         max: 10,
                         title: {
                             display: true,
-                            text: 'Do you prefer learning from theory (0), or go to practice immediatly (10)?',
+                            text: 'From theory (0)      or       practice immediatly (10)',
                             font: {
                                 size: 12,
                                 weight: 'bold'
